--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,15 +3,17 @@
   <tr>
     <th>title</th>
     <th>description</th>
-    <th>Actions</th>
+    <th colspan="3">Actions</th>
   </tr>
   <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.description %></td>
-      <td>View</td>
-      <td><a href="<%= edit_article_path(article.id)%>">Edit</a></td>
-      <td>Delete</td>
+      <td><%= link_to "View", article_path(article.id) %></td>
+      <td><%= link_to "Edit", edit_article_path(article.id) %></td>
+      <td><%= link_to 'Delete', article_path(article), data: { "turbo-method": :delete, turbo_confirm: 'Are you sure?' } %></td>
+      <!-- <%# <td><%= button_to "Delete", article_path(article.id), method: :delete, data: { confirm: 'Are you sure you want to delete this article?' } %></td> %> --> 
     </tr>
   <% end %>
 </table>
+<p><td><%= link_to "Add new article", new_article_path %></td></p>
