--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,9 @@
 Title: <%= @article.title %>
 <br>
 Desc: <%= @article.description %>
+
+<p>
+  <%= link_to "Edit", edit_article_path(@article.id) %> |
+  <%= link_to 'Delete', article_path(@article), data: { "turbo-method": :delete, turbo_confirm: 'Are you sure?' } %> |
+  <%= link_to "View All Articles", articles_path %> |
+</p>
